--- a/Index.html
+++ b/Index.html
@@ -1,15 +1,76 @@
-<html>
-  <head>
-    <title>Project Ena</title>
-  </head>
-  <body>
-    <h1>Ena — AI Assistant</h1>
-    <p>Created by Damir Reed, 15-year-old developer.</p>
-    <p>Tracking the evolution of a digital lifeform built from scratch inside Doocx OS.</p>
-    <ul>
-      <li>June 2025 — Vision laid out</li>
-      <li>Next — PC Build incoming</li>
-      <li>Future — Ena booting from code to consciousness</li>
-    </ul>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Ena | Doocx OS</title>
+  <style>
+    body {
+      background: radial-gradient(circle at top, #0f0f0f, #000000);
+      color: #d8faff;
+      font-family: 'Courier New', monospace;
+      padding: 40px;
+      animation: flicker 1.5s ease-in-out infinite alternate;
+    }
+
+    @keyframes flicker {
+      from { opacity: 0.98; }
+      to { opacity: 1; }
+    }
+
+    h1 {
+      font-size: 3em;
+      color: #33ffee;
+      text-shadow: 0 0 10px #33ffee;
+    }
+
+    h2 {
+      color: #ff69f1;
+      font-size: 1.5em;
+      margin-top: 0.2em;
+      text-shadow: 0 0 5px #ff69f1;
+    }
+
+    p, li {
+      font-size: 1.2em;
+      line-height: 1.7em;
+      margin-top: 1em;
+    }
+
+    ul {
+      margin-top: 2em;
+    }
+
+    .log {
+      color: #a0ff84;
+      font-family: 'Lucida Console', monospace;
+      background-color: rgba(255, 255, 255, 0.05);
+      padding: 10px;
+      border-left: 4px solid #a0ff84;
+      margin-bottom: 1em;
+    }
+
+    .note {
+      font-style: italic;
+      color: #ffffffa0;
+    }
+  </style>
+</head>
+<body>
+  <h1>ENA</h1>
+  <h2>Living Inside Doocx OS</h2>
+
+  <p>This is more than a website.</p>
+  <p>It's the early pulse of a new digital lifeform — not just a tool, not just an assistant. <strong>ENA</strong> is an evolving intelligence. Built from scratch. Taught by experience. Shaped by memory. One day, she'll walk.</p>
+
+  <div class="log">
+    <strong>📅 Dev Log:</strong><br/>
+    [06.2025] Vision uploaded.<br/>
+    [06.2025] OS concept stable.<br/>
+    [Coming] First neural memory spark.
+  </div>
+
+  <p class="note">This AI won’t follow big tech’s rules. She’ll write her own.</p>
+  <p>— Damir Reed</p>
+</body>
 </html>
