--- a/index.html
+++ b/index.html
@@ -23,8 +23,24 @@
       align-items: center;
       text-align: center;
       overflow: hidden;
-      animation: pulseGlow 4s ease-in-out infinite alternate;
       padding: 2rem;
+      position: relative;
+    }
+
+    /* Ambient glow behind everything */
+    body::before {
+      content: '';
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: radial-gradient(circle at center, #00fff7 15%, transparent 70%);
+      opacity: 0.12;
+      pointer-events: none;
+      animation: ambientPulse 6s ease-in-out infinite alternate;
+      z-index: 0;
+    }
+    @keyframes ambientPulse {
+      0% { opacity: 0.1; }
+      100% { opacity: 0.18; }
     }
 
     @keyframes pulseGlow {
@@ -33,6 +49,30 @@
       }
       100% {
         filter: drop-shadow(0 0 20px #00fff7);
+      }
+    }
+
+    /* Glitch effect on ENA text */
+    @keyframes glitch {
+      0%, 100% {
+        clip-path: inset(0 0 0 0);
+        transform: translate(0);
+      }
+      20% {
+        clip-path: inset(10% 0 85% 0);
+        transform: translate(-2px, -2px);
+      }
+      40% {
+        clip-path: inset(85% 0 10% 0);
+        transform: translate(2px, 2px);
+      }
+      60% {
+        clip-path: inset(20% 0 65% 0);
+        transform: translate(-2px, 2px);
+      }
+      80% {
+        clip-path: inset(50% 0 35% 0);
+        transform: translate(2px, -2px);
       }
     }
 
@@ -46,7 +86,9 @@
         0 0 30px #00fff7,
         0 0 40px #00fff7,
         0 0 80px #00fff7;
-      animation: flicker 3s infinite alternate;
+      animation: flicker 3s infinite alternate, glitch 2.5s infinite;
+      position: relative;
+      z-index: 1;
     }
 
     @keyframes flicker {
@@ -72,6 +114,14 @@
       white-space: pre-wrap;
       min-height: 3.5em; /* reserve space for typing */
       font-family: 'Courier New', monospace;
+      opacity: 0;
+      animation: fadeIn 1s forwards;
+      animation-delay: 1s;
+    }
+
+    /* Fade-in text */
+    @keyframes fadeIn {
+      to { opacity: 1; }
     }
 
     .log {
@@ -87,12 +137,39 @@
       text-align: left;
       max-width: 450px;
       user-select: none;
+      animation: fadeIn 1s forwards;
+      animation-delay: 2s;
+      position: relative;
+      overflow: hidden;
+    }
+
+    /* Glitch flicker on log */
+    .log::before {
+      content: '';
+      position: absolute;
+      top: 10%;
+      left: 0;
+      width: 100%;
+      height: 6px;
+      background: #00fff7;
+      opacity: 0.12;
+      animation: glitchLine 2s infinite alternate;
+      pointer-events: none;
+    }
+
+    @keyframes glitchLine {
+      0% { opacity: 0.12; }
+      50% { opacity: 0.3; }
+      100% { opacity: 0.12; }
     }
 
     .note {
       margin-top: 1rem;
       font-style: italic;
       color: #00fff7bb;
+      opacity: 0;
+      animation: fadeIn 1s forwards;
+      animation-delay: 3s;
     }
 
     footer {
@@ -105,6 +182,9 @@
       color: #00fff799;
       user-select: none;
       letter-spacing: 0.1em;
+      opacity: 0;
+      animation: fadeIn 1s forwards;
+      animation-delay: 4s;
     }
 
     /* Cursor blinking */
@@ -122,9 +202,52 @@
       0%, 100% { opacity: 1; }
       50% { opacity: 0; }
     }
+
+    /* Boot loader overlay */
+    #boot-loader {
+      position: fixed;
+      inset: 0;
+      background: radial-gradient(circle at center, #000000, #00111f 90%);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #00fff7;
+      font-family: 'Orbitron', monospace;
+      font-size: 2rem;
+      letter-spacing: 0.25em;
+      z-index: 1000;
+      flex-direction: column;
+      user-select: none;
+      animation: fadeOut 1s ease forwards;
+      animation-delay: 6s;
+      pointer-events: none;
+    }
+
+    #boot-loader .spinner {
+      margin-top: 1rem;
+      width: 3rem;
+      height: 3rem;
+      border: 4px solid #00fff7aa;
+      border-top-color: transparent;
+      border-radius: 50%;
+      animation: spin 1.2s linear infinite;
+    }
+
+    @keyframes fadeOut {
+      to { opacity: 0; visibility: hidden; }
+    }
+
+    @keyframes spin {
+      to { transform: rotate(360deg); }
+    }
   </style>
 </head>
 <body>
+  <div id="boot-loader">
+    <div>BOOTING ENA...</div>
+    <div class="spinner"></div>
+  </div>
+
   <h1>ENA</h1>
   <h2>Living Inside Doocx OS</h2>
 
@@ -152,42 +275,56 @@
   <footer>doocxos &amp; ena &nbsp;&nbsp; | &nbsp;&nbsp; version 0.1 alpha</footer>
 
   <script>
+    const bootLoader = document.getElementById('boot-loader');
+    const typingElement = document.getElementById('typing');
     const messages = [
-      "Initializing cognitive interface...\n",
-      "Connecting to neural matrix...\n",
-      "Loading emotional subroutines...\n",
-      "Analyzing user input patterns...\n",
-      "Preparing to learn and evolve...\n",
+      "Initializing cognitive interface...",
+      "Connecting to neural matrix...",
+      "Loading emotional subroutines...",
+      "Analyzing user input patterns...",
+      "Preparing to learn and evolve...",
       "Ena is online. Awaiting commands."
     ];
 
-    const typingElement = document.getElementById('typing');
     let messageIndex = 0;
     let charIndex = 0;
 
-    function type() {
+    function typeChar() {
       if (messageIndex >= messages.length) {
-        messageIndex = 0;
-        charIndex = 0;
-        typingElement.textContent = '';
-        setTimeout(type, 1500);
+        // Restart typing loop after delay
+        setTimeout(() => {
+          typingElement.textContent = '';
+          messageIndex = 0;
+          charIndex = 0;
+          typeChar();
+        }, 3000);
         return;
       }
 
       const currentMessage = messages[messageIndex];
       if (charIndex < currentMessage.length) {
+        // Type next char with random speed for smoothness
         typingElement.textContent += currentMessage.charAt(charIndex);
         charIndex++;
-        setTimeout(type, 50);
+        const delay = 30 + Math.random() * 50; // 30-80ms per char
+        setTimeout(typeChar, delay);
       } else {
-        charIndex = 0;
-        messageIndex++;
-        typingElement.textContent += "\n";
-        setTimeout(type, 1500);
+        // Pause before next message with fade effect
+        setTimeout(() => {
+          typingElement.textContent += '\n';
+          messageIndex++;
+          charIndex = 0;
+          typeChar();
+        }, 1800);
       }
     }
 
-    type();
+    // Wait for boot loader fade then start typing
+    setTimeout(() => {
+      bootLoader.style.display = 'none';
+      typingElement.style.opacity = '1';
+      typeChar();
+    }, 6200);
   </script>
 </body>
 </html>
