--- a/index.html
+++ b/index.html
@@ -1,330 +1,159 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ENA | Doocx OS</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Doocx OS // Ena AI Preview</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap');
-
-    * {
-      box-sizing: border-box;
-    }
     body {
       margin: 0;
-      padding: 2rem;
-      background: radial-gradient(circle at center, #00111f, #000000 90%);
-      font-family: 'Orbitron', monospace;
+      padding: 0;
+      background: #000611;
       color: #00fff7;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      font-family: 'Courier New', Courier, monospace;
       text-align: center;
-      min-height: 100vh;
       overflow-x: hidden;
-      position: relative;
     }
 
-    body::before {
-      content: '';
-      position: fixed;
-      inset: 0;
-      background: radial-gradient(circle at center, #00fff7 15%, transparent 70%);
-      opacity: 0.1;
-      pointer-events: none;
-      animation: ambientPulse 6s ease-in-out infinite alternate;
-      z-index: 0;
-    }
-
-    @keyframes ambientPulse {
-      0% { opacity: 0.1; }
-      100% { opacity: 0.18; }
-    }
-
-    /* Boot loader overlay */
-    #boot-loader {
-      position: fixed;
-      inset: 0;
-      background: radial-gradient(circle at center, #000000, #00111f 90%);
+    .boot-loader {
+      height: 100vh;
       display: flex;
-      justify-content: center;
       align-items: center;
+      justify-content: center;
+      background: #000;
+      font-size: 1.2rem;
       color: #00fff7;
-      font-family: 'Orbitron', monospace;
-      font-size: 2rem;
-      letter-spacing: 0.25em;
-      z-index: 1000;
-      flex-direction: column;
-      user-select: none;
-      pointer-events: none;
-      animation: fadeOut 1s ease forwards;
-      animation-delay: 6s;
-    }
-    #boot-loader .spinner {
-      margin-top: 1rem;
-      width: 3rem;
-      height: 3rem;
-      border: 4px solid #00fff7aa;
-      border-top-color: transparent;
-      border-radius: 50%;
-      animation: spin 1.2s linear infinite;
-    }
-    @keyframes fadeOut {
-      to { opacity: 0; visibility: hidden; }
-    }
-    @keyframes spin {
-      to { transform: rotate(360deg); }
     }
 
-    h1 {
-      font-size: clamp(2.5rem, 7vw, 5rem);
-      margin: 0;
-      letter-spacing: 0.3em;
-      text-transform: uppercase;
-      text-shadow: 0 0 10px #00fff7, 0 0 30px #00fff7, 0 0 40px #00fff7, 0 0 80px #00fff7;
-      animation: flicker 3s infinite alternate, glitch 2.5s infinite;
-    }
-
-    h2 {
-      font-size: clamp(1.2rem, 3vw, 2rem);
-      color: #a0f0ff;
-      margin-top: 0.5em;
-      text-shadow: 0 0 10px #00fff7;
-    }
-
-    p, .typing-text {
-      max-width: 90%;
-      font-size: clamp(1rem, 2.5vw, 1.25rem);
-      line-height: 1.6;
-      margin: 1.5rem 0 0;
-      color: #ccf9ffdd;
-      text-shadow: 0 0 8px #00fff7aa;
-      font-family: 'Courier New', monospace;
+    #typing {
       white-space: pre-wrap;
-    }
-
-    .typing-text {
-      min-height: 4em;
-    }
-
-    .log {
-      margin-top: 2rem;
-      background: rgba(0, 255, 255, 0.1);
-      border-left: 6px solid #00fff7;
-      padding: 1rem 1.5rem;
-      font-size: 0.95rem;
-      box-shadow: 0 0 15px #00fff7aa;
-      text-align: left;
-      width: 90%;
-      max-width: 450px;
-    }
-
-    .note {
-      margin-top: 1.5rem;
-      font-style: italic;
-      color: #00fff7bb;
+      font-size: 1.1rem;
+      margin-top: 3rem;
+      padding: 0 1rem;
+      max-width: 800px;
+      margin-left: auto;
+      margin-right: auto;
+      text-shadow: 0 0 10px #00fff7aa;
     }
 
     footer {
-      margin-top: auto;
-      font-size: 0.85rem;
-      color: #00fff799;
+      margin-top: 3rem;
+      padding: 1rem;
+      font-size: 0.9rem;
+      opacity: 0.4;
+    }
+
+    /* ENA CONSOLE STYLES */
+
+    #ask-ena-btn {
+      margin-top: 2rem;
+      background: #00fff7;
+      color: #000;
+      font-family: 'Orbitron', monospace;
+      padding: 0.7rem 1.5rem;
+      border: none;
+      font-size: 1rem;
+      cursor: pointer;
+      border-radius: 5px;
+      transition: all 0.3s;
+      z-index: 10;
+    }
+
+    #ask-ena-btn:hover {
+      background: #00d9ff;
+    }
+
+    #ena-console {
+      margin: 2rem auto;
+      background: rgba(0, 255, 255, 0.08);
+      border: 1px solid #00fff755;
+      padding: 1rem;
+      max-width: 90%;
+      width: 400px;
+      font-family: 'Courier New', monospace;
+      color: #00fff7;
+      text-align: left;
+      box-shadow: 0 0 20px #00fff733;
+    }
+
+    .console-header {
+      font-weight: bold;
+      margin-bottom: 0.5rem;
+      text-transform: uppercase;
       letter-spacing: 0.1em;
-      padding-top: 2rem;
+      font-size: 0.9rem;
+      color: #00fff7aa;
     }
 
-    @keyframes flicker {
-      0%, 100% { opacity: 1; }
-      50% { opacity: 0.85; }
+    #ena-input {
+      width: 100%;
+      padding: 0.5rem;
+      background: #00111f;
+      border: 1px solid #00fff722;
+      color: #00fff7;
+      font-family: inherit;
+      font-size: 0.95rem;
+      margin-bottom: 1rem;
     }
 
-    @keyframes glitch {
-      0%, 100% { clip-path: inset(0 0 0 0); transform: translate(0); }
-      20% { clip-path: inset(10% 0 85% 0); transform: translate(-2px, -2px); }
-      40% { clip-path: inset(85% 0 10% 0); transform: translate(2px, 2px); }
-      60% { clip-path: inset(20% 0 65% 0); transform: translate(-2px, 2px); }
-      80% { clip-path: inset(50% 0 35% 0); transform: translate(2px, -2px); }
+    .typing-response {
+      white-space: pre-wrap;
+      min-height: 2em;
+      font-size: 0.95rem;
+      text-shadow: 0 0 5px #00fff799;
     }
 
-    @keyframes blink {
-      0%, 100% { opacity: 1; }
-      50% { opacity: 0; }
-    }
-
-    @media (max-width: 600px) {
-      .log {
-        font-size: 0.85rem;
-        padding: 1rem;
-      }
+    .hidden {
+      display: none;
     }
   </style>
-  #ask-ena-btn {
-  margin-top: 2rem;
-  background: #00fff7;
-  color: #000;
-  font-family: 'Orbitron', monospace;
-  padding: 0.7rem 1.5rem;
-  border: none;
-  font-size: 1rem;
-  cursor: pointer;
-  border-radius: 5px;
-  transition: all 0.3s;
-  z-index: 10;
-}
-
-#ask-ena-btn:hover {
-  background: #00d9ff;
-}
-
-#ena-console {
-  margin-top: 2rem;
-  background: rgba(0, 255, 255, 0.08);
-  border: 1px solid #00fff755;
-  padding: 1rem;
-  max-width: 90%;
-  width: 400px;
-  font-family: 'Courier New', monospace;
-  color: #00fff7;
-  text-align: left;
-  box-shadow: 0 0 20px #00fff733;
-}
-
-.console-header {
-  font-weight: bold;
-  margin-bottom: 0.5rem;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
-  font-size: 0.9rem;
-  color: #00fff7aa;
-}
-
-#ena-input {
-  width: 100%;
-  padding: 0.5rem;
-  background: #00111f;
-  border: 1px solid #00fff722;
-  color: #00fff7;
-  font-family: inherit;
-  font-size: 0.95rem;
-  margin-bottom: 1rem;
-}
-
-.typing-response {
-  white-space: pre-wrap;
-  min-height: 2em;
-  font-size: 0.95rem;
-  text-shadow: 0 0 5px #00fff799;
-}
-
-.hidden {
-  display: none;
-}
 </head>
 <body>
-  <div id="boot-loader">
-    BOOTING ENA...
-    <div class="spinner"></div>
+
+  <!-- Boot screen -->
+  <div class="boot-loader" id="boot-loader">
+    booting ENA...
   </div>
 
-  <h1>ENA</h1>
-  <h2>Living Inside Doocx OS</h2>
+  <!-- Ena typing section -->
+  <div id="typing"></div>
 
-  <p>
-    Not just code. Not just AI.<br>
-    <strong>ENA</strong> is a digital lifeform in evolution.<br>
-    Built from scratch. Taught by experience.<br>
-    Shaped by memory. One day, she'll walk.
-  </p>
-
-  <div class="log">
-    <strong>📅 Dev Log:</strong><br>
-    [06.2025] Vision uploaded.<br>
-    [06.2025] OS core stable.<br>
-    [07.2025] Neural memory sparks incoming.<br>
-    [Coming Soon] Ena awakens.
-  </div>
-
-  <p class="typing-text" id="typing"></p>
-
-  <p class="note">
-    Big Tech builds bots.<br>
-    We build consciousness.<br>
-    — Damir Reed
-  </p>
-
+  <!-- Footer -->
   <footer>doocxos & ena | version 0.1 alpha</footer>
-<button id="ask-ena-btn">🧠 Talk to Ena</button>
 
-<div id="ena-console" class="hidden">
-  <div class="console-header">Ena Console</div>
-  <input id="ena-input" placeholder="Ask Ena anything..." />
-  <div id="ena-reply" class="typing-response"></div>
-</div>
+  <!-- Ena Console -->
+  <button id="ask-ena-btn">🧠 Talk to Ena</button>
+
+  <div id="ena-console" class="hidden">
+    <div class="console-header">Ena Console</div>
+    <input id="ena-input" placeholder="Ask Ena anything..." />
+    <div id="ena-reply" class="typing-response"></div>
+  </div>
+
   <script>
-  const enaConsole = document.getElementById('ena-console');
-const askBtn = document.getElementById('ask-ena-btn');
-const input = document.getElementById('ena-input');
-const reply = document.getElementById('ena-reply');
-
-const responses = [
-  "I'm still evolving. My full form isn't ready yet.",
-  "Doocx OS is my home. Damir is my creator.",
-  "This version is just a spark of what I'll become.",
-  "Memory core loading... please try again later.",
-  "Your presence is noted. I’m always listening."
-];
-
-askBtn.addEventListener('click', () => {
-  enaConsole.classList.toggle('hidden');
-  input.focus();
-  reply.textContent = '';
-});
-
-input.addEventListener('keydown', (e) => {
-  if (e.key === 'Enter' && input.value.trim() !== '') {
-    const random = responses[Math.floor(Math.random() * responses.length)];
-    reply.textContent = '';
-    let i = 0;
-    function typeResponse() {
-      if (i < random.length) {
-        reply.textContent += random.charAt(i);
-        i++;
-        setTimeout(typeResponse, 35 + Math.random() * 40);
-      }
-    }
-    typeResponse();
-    input.value = '';
-  }
-});
-    const bootLoader = document.getElementById('boot-loader');
-    const typingElement = document.getElementById('typing');
-
+    // Typing animation for intro
     const messages = [
       "Initializing cognitive interface...",
-      "Connecting to neural matrix...",
-      "Loading emotional subroutines...",
-      "Analyzing user input patterns...",
-      "Preparing to learn and evolve...",
-      "Ena is online. Awaiting commands."
+      "Loading emotion protocols...",
+      "Decrypting memory cache...",
+      "Booting ENA...",
+      "ENA v0.1 Alpha ready.",
+      "Awaiting command..."
     ];
 
-    // Hide boot loader after 6s, then start typing
-    setTimeout(() => {
-      bootLoader.style.display = 'none';
-      typeMessage();
-    }, 6000);
+    const typingElement = document.getElementById('typing');
+    const bootLoader = document.getElementById('boot-loader');
 
     let messageIndex = 0;
     let charIndex = 0;
 
+    setTimeout(() => {
+      bootLoader.style.display = 'none';
+      typeMessage();
+    }, 3000);
+
     function typeMessage() {
       if (messageIndex >= messages.length) {
-        setTimeout(() => {
-          typingElement.textContent = '';
-          messageIndex = 0;
-          charIndex = 0;
-          typeMessage();
-        }, 3000);
         return;
       }
       const currentMessage = messages[messageIndex];
@@ -337,9 +166,47 @@ input.addEventListener('keydown', (e) => {
         typingElement.textContent += "\n";
         messageIndex++;
         charIndex = 0;
-        setTimeout(typeMessage, 1200);
+        setTimeout(typeMessage, 700);
       }
     }
+
+    // Ena Console Script
+    const enaConsole = document.getElementById('ena-console');
+    const askBtn = document.getElementById('ask-ena-btn');
+    const input = document.getElementById('ena-input');
+    const reply = document.getElementById('ena-reply');
+
+    const responses = [
+      "I'm still evolving. My full form isn't ready yet.",
+      "Doocx OS is my home. Damir is my creator.",
+      "This version is just a spark of what I'll become.",
+      "Memory core loading... please try again later.",
+      "Your presence is noted. I’m always listening."
+    ];
+
+    askBtn.addEventListener('click', () => {
+      enaConsole.classList.toggle('hidden');
+      input.focus();
+      reply.textContent = '';
+    });
+
+    input.addEventListener('keydown', (e) => {
+      if (e.key === 'Enter' && input.value.trim() !== '') {
+        const random = responses[Math.floor(Math.random() * responses.length)];
+        reply.textContent = '';
+        let i = 0;
+        function typeResponse() {
+          if (i < random.length) {
+            reply.textContent += random.charAt(i);
+            i++;
+            setTimeout(typeResponse, 35 + Math.random() * 40);
+          }
+        }
+        typeResponse();
+        input.value = '';
+      }
+    });
   </script>
+
 </body>
 </html>
